# AI-Code-Refactor-and-Optimization

./: .env  Dockerfile  README.md  docker-compose.yml
.cursor/rules/: 01-core-standards.md  frontend-standards.mdc  quality-gates.mdc
backend/: .env.save
backend/app/: __init__.py  api_routes.py  llm_client.py  models.py  static_scans.py
frontend/: package.json
frontend/src/: App.tsx
frontend/src/api/: refactorai.ts
frontend/src/components/ui/: badge.tsx  button.tsx  scroll-area.tsx
frontend/src/store/: useConfigStore.ts
refactorai-assistant/: .env.example  package-lock.json
refactorai-assistant/.cursor/rules/: core-standards.mdc  llm-standards.mdc  python-standards.mdc
refactorai-assistant/backend/: pyproject.toml  requirements.txt
refactorai-assistant/backend/app/: ast_blocks.py  config.py  main.py  subprocess_utils.py
refactorai-assistant/frontend/: package-lock.json  tailwind.config.js
refactorai-assistant/frontend/src/: index.css  main.tsx
refactorai-assistant/frontend/src/api/: client.ts  config.ts
refactorai-assistant/frontend/src/components/ui/: accordion.tsx  card.tsx  progress.tsx  tabs.tsx
refactorai-assistant/frontend/src/store/: useFileStore.ts
refactorai-assistant/frontend/src/types/: api.ts
