[project]
name = "refactorai-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0.1",
  "litellm>=1.44.0",
  "instructor>=1.6.0",
  "ruff>=0.6.0",
  "bandit>=1.7.9",
  "mypy>=1.10.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-select = ["I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
mypy_path = "app"
